@@ -660,8 +660,8 @@
                 <docker.dockerHost>http://1.116.226.147:2375</docker.dockerHost>
                 <docker.maintainer>wangtao wwangtaoc11@163.com</docker.maintainer>
                 <docker.imageTag>latest</docker.imageTag>
-                <docker.cmd>["java","-version","-Xms64m","-Xmx128m"]</docker.cmd>
-                <docker.entryPoint>["java","-jar","-Xms64m","-Xmx128m","${project.build.finalName}.jar"]</docker.entryPoint>
+                <docker.cmd>["java","-version"]</docker.cmd>
+                <docker.entryPoint>["java","-XX:MetaspaceSize=128m","-XX:MaxMetaspaceSize=56m","-Xms64m","-Xmx128m","-Xmn32m","-Xss256k","-XX:SurvivorRatio=8","-XX:+UseConcMarkSweepGC","-jar","${project.build.finalName}.jar"]</docker.entryPoint>
             </properties>
         </profile>
     </profiles>
